--- a/AboutUs.html
+++ b/AboutUs.html
@@ -54,7 +54,7 @@
 
         <div class="blog-box">
             <div class="blog-img">
-                <img src="img/about/a6.jpg" alt="">
+                <img src="img/banner/b19.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h2>Who We Are ?</h2>
